# HealthmAgement

./: CMakeLists.txt  main.c  main.h
data/: config.c  config.h  data.csv
sections/: sections.c  sections.h
sections/Atendimento/: Atendimento.c  Atendimento.h
sections/Atendimento/utils/: utils.c  utils.h
sections/Carregar-Salvar/: Carregar.c  Carregar.h
sections/Carregar-Salvar/utils/: utils.c  utils.h
sections/Pesquisa/: Pesquisa.c  Pesquisa.h
sections/Sobre/: Sobre.c  Sobre.h
sections/cadastrar/: cadastrar.c  cadastrar.h
sections/cadastrar/utils/: utils.c  utils.h
types/default/ABB/: ABB.c  ABB.h
types/default/ABB/utils/: utils.c  utils.h
types/default/List/: List.c  List.h
types/default/List/utils/: utils.c  utils.h
types/default/Registry/: Registry.c  Registry.h
types/default/Registry/utils/: utils.c  utils.h
types/default/Row/: Row.c  Row.h
types/default/Row/utils/: utils.c  utils.h
types/others/: Objectthis.c  Objectthis.h
utils/Clear/: Clear.c  Clear.h
utils/filemodule/: filemodule.c  filemodule.h
utils/input/: input.c  input.h
